--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/test" routerLinkActive="router-link-active">Test</button>
     <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/meaning-test" routerLinkActive="router-link-active">Meaning Test</button>
     <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/sentence-test" routerLinkActive="router-link-active">Sentence Test</button>
+    <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/image-test" routerLinkActive="router-link-active">Image Test</button>
     <button mat-button class="button-modern" routerLink="/signout">Sign Out</button>
     <div class="welcome-message" *ngIf="displayName">Welcome, {{ displayName }}</div>
   </div>
@@ -18,6 +19,7 @@
     <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/test" routerLinkActive="router-link-active">Test</button>
     <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/meaning-test" routerLinkActive="router-link-active">Meaning Test</button>
     <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/sentence-test" routerLinkActive="router-link-active">Sentence Test</button>
+    <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/image-test" routerLinkActive="router-link-active">Image Test</button>
     <button mat-menu-item routerLink="/signout">Sign Out</button>
     <div class="welcome-message" *ngIf="displayName">Welcome, {{ displayName }}</div>
   </mat-menu>
