--- a/src/app/test/test.component.html
+++ b/src/app/test/test.component.html
@@ -1,13 +1,12 @@
 <!-- src/app/test/test.component.html -->
-
 <div *ngIf="noFlashcards" class="no-flashcards-container">
   <h2>No flashcards available</h2>
   <p>Please create some flashcards to start the test.</p>
   <button mat-raised-button class="button-modern" routerLink="/flashcards">Go to Flashcards</button>
 </div>
 <div class="test-container" *ngIf="!noFlashcards && !showResult">
-  <h2>Question {{currentQuestionIndex + 1}}/{{flashcards.length}}</h2>
-  <p>What is the meaning of the word: <strong>{{flashcards[currentQuestionIndex]?.word}}</strong>?</p>
+  <h2>Question {{currentQuestionIndex + 1}}/{{filteredFlashcards.length}}</h2>
+  <p>What is the meaning of the word: <strong>{{filteredFlashcards[currentQuestionIndex]?.word}}</strong>?</p>
   <mat-radio-group [(ngModel)]="userAnswer" (change)="checkAnswer($event.value)" class="options-group">
     <mat-radio-button *ngFor="let option of options" [value]="option" class="option-item">
       {{option}}
@@ -20,7 +19,7 @@
 </div>
 <div class="result-container center-content" *ngIf="showResult">
   <h2>Test Completed</h2>
-  <p>You scored {{ score }} out of {{ flashcards.length }}</p>
+  <p>You scored {{ score }} out of {{ filteredFlashcards.length }}</p>
   <button mat-raised-button class="button-modern" (click)="restartTest()">Restart Test</button>
   <button mat-raised-button color="accent" class="button-modern" routerLink="/flashcards">Back to Flashcards</button>
 </div>
