random test has been created. related navigation bar adjustments have been done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,46 @@
 <mat-toolbar color="primary">
-  <span>Flashcards App</span>
-  <div class="toolbar-buttons" *ngIf="!isMobile">
-    <button mat-button class="button-modern" routerLink="/flashcards" routerLinkActive="router-link-active">Flashcards</button>
-    <button mat-button class="button-modern" routerLink="/public-flashcards" routerLinkActive="router-link-active">Public Flashcards</button>
-    <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/test" routerLinkActive="router-link-active">Favorites Test</button>
-    <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/meaning-test" routerLinkActive="router-link-active">Meaning Test</button>
-    <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/sentence-test" routerLinkActive="router-link-active">Sentence Test</button>
-    <button *ngIf="hasEnoughFlashcards()" mat-button class="button-modern" routerLink="/image-test" routerLinkActive="router-link-active">Image Test</button>
-    <button mat-button class="button-modern" routerLink="/signout">Sign Out</button>
-    <div class="welcome-message" *ngIf="displayName">Welcome, {{ displayName }}</div>
+  <div class="toolbar-inner">
+    <span>Flashcards App</span>
+    <div class="toolbar-buttons" *ngIf="!isMobile">
+      <button mat-button class="button-modern" routerLink="/flashcards" routerLinkActive="router-link-active">Flashcards</button>
+      <button mat-button class="button-modern" routerLink="/public-flashcards" routerLinkActive="router-link-active">Public Flashcards</button>
+      <button mat-button class="button-modern" routerLink="/signout">Sign Out</button>
+      <div class="welcome-message" *ngIf="displayName">Welcome, {{ displayName }}</div>
+    </div>
+    <button mat-icon-button *ngIf="isMobile" [matMenuTriggerFor]="mobileMenu">
+      <mat-icon>menu</mat-icon>
+    </button>
+    <mat-menu #mobileMenu="matMenu">
+      <button mat-menu-item routerLink="/flashcards" routerLinkActive="router-link-active">Flashcards</button>
+      <button mat-menu-item routerLink="/public-flashcards" routerLinkActive="router-link-active">Public Flashcards</button>
+      <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/test" routerLinkActive="router-link-active">Favorites Test</button>
+      <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/meaning-test" routerLinkActive="router-link-active">Meaning Test</button>
+      <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/sentence-test" routerLinkActive="router-link-active">Sentence Test</button>
+      <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/image-test" routerLinkActive="router-link-active">Image Test</button>
+      <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/random-test" routerLinkActive="router-link-active">Random Test</button>
+      <button mat-menu-item routerLink="/signout">Sign Out</button>
+      <div class="welcome-message" *ngIf="displayName">Welcome, {{ displayName }}</div>
+    </mat-menu>
   </div>
-  <button mat-icon-button *ngIf="isMobile" [matMenuTriggerFor]="mobileMenu">
-    <mat-icon>menu</mat-icon>
-  </button>
-  <mat-menu #mobileMenu="matMenu">
-    <button mat-menu-item routerLink="/flashcards" routerLinkActive="router-link-active">Flashcards</button>
-    <button mat-menu-item routerLink="/public-flashcards" routerLinkActive="router-link-active">Public Flashcards</button>
-    <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/test" routerLinkActive="router-link-active">Favorites Test</button>
-    <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/meaning-test" routerLinkActive="router-link-active">Meaning Test</button>
-    <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/sentence-test" routerLinkActive="router-link-active">Sentence Test</button>
-    <button *ngIf="hasEnoughFlashcards()" mat-menu-item routerLink="/image-test" routerLinkActive="router-link-active">Image Test</button>
-    <button mat-menu-item routerLink="/signout">Sign Out</button>
-    <div class="welcome-message" *ngIf="displayName">Welcome, {{ displayName }}</div>
-  </mat-menu>
 </mat-toolbar>
+<div class="test-list" *ngIf="!isMobile && hasEnoughFlashcards()">
+  <h3>Available Tests</h3>
+  <ul>
+    <li>
+      <button mat-button class="button-modern" routerLink="/test" routerLinkActive="router-link-active">Favorites Test</button>
+    </li>
+    <li>
+      <button mat-button class="button-modern" routerLink="/meaning-test" routerLinkActive="router-link-active">Meaning Test</button>
+    </li>
+    <li>
+      <button mat-button class="button-modern" routerLink="/sentence-test" routerLinkActive="router-link-active">Sentence Test</button>
+    </li>
+    <li>
+      <button mat-button class="button-modern" routerLink="/image-test" routerLinkActive="router-link-active">Image Test</button>
+    </li>
+    <li>
+      <button mat-button class="button-modern" routerLink="/random-test" routerLinkActive="router-link-active">Random Test</button>
+    </li>
+  </ul>
+</div>
 <router-outlet></router-outlet>
