--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,15 @@
 /* src/app/app.component.css */
 mat-toolbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   background-color: #3f51b5;
   color: white;
   flex-wrap: wrap;
+}
+
+.toolbar-inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .toolbar-buttons {
@@ -36,9 +40,34 @@ mat-toolbar {
 }
 
 .welcome-message {
-  padding-left: 16px;
   font-size: 14px;
   color: white;
+}
+
+.test-list {
+  margin: 20px auto;
+  max-width: 800px;
+  text-align: center;
+}
+
+.test-list h3 {
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.test-list ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.test-list li {
+  display: inline-block;
+  margin-bottom: 10px;
+}
+
+.test-list button {
+  display: block;
+  width: 100%;
 }
 
 /* Make the toolbar responsive */
@@ -64,5 +93,9 @@ mat-toolbar {
 
   mat-menu .mat-menu-item {
     color: #000;
+  }
+
+  .test-list {
+    display: none;
   }
 }
