next button disabled before check in synonyms component

--- a/src/app/synonym-quiz/synonym-quiz.component.html
+++ b/src/app/synonym-quiz/synonym-quiz.component.html
@@ -13,8 +13,9 @@
 
   <div class="actions">
     <button mat-raised-button color="primary" (click)="checkAnswer()">Check</button>
-    <button mat-raised-button color="accent" (click)="nextCard()">Next</button>
+    <button mat-raised-button color="accent" (click)="nextCard()" [disabled]="!answered">Next</button>
   </div>
+
 
   <p class="feedback">{{ feedback }}</p>
   <p class="progress">{{ progressText }}</p>
